tests/class_method_default_parameters/class_method_default_parameters.exp
Error --------------------------------- class_method_default_parameters.js:17:19

string [1] is incompatible with number [2].



Found 1 error
